...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/validateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixedlist_addDialog_validate"/>

        <Button
            android:id="@+id/cancelButton"
...
